--- a/styles/layout.css
+++ b/styles/layout.css
@@ -251,16 +251,16 @@
       }
 
       h1 {
-        --at-apply: text-5xl font-black mb-4 before:content-[ '#'] leading-16;
+        --at-apply: text-5xl font-black mb-4 before:content-['#'] leading-16;
       }
 
       h2 {
-        --at-apply: text-3xl font-bold before:content-[ '##'] mb-2 leading-10
+        --at-apply: text-3xl font-bold before:content-['##'] mb-2 leading-10
           mt-8;
       }
 
       h3 {
-        --at-apply: text-2xl font-bold before:content-[ '###'] mb-2 leading-9
+        --at-apply: text-2xl font-bold before:content-['###'] mb-2 leading-9
           mt-8;
       }
 
@@ -298,7 +298,7 @@
     .slidev-layout.cover {
       --at-apply: grid place-items-center text-center;
       h1 {
-        --at-apply: text-transparent bg-clip-text bg-gradient-to-r from-green to-sky text-6xl leading-16 mx-0 before:content-none mb-0;
+        --at-apply: text-transparent bg-clip-text bg-gradient-to-r text-6xl leading-16 mx-0 before:content-none mb-0;
       }
       h1 + p {
         --at-apply: mt-1 leading-14 text-3xl;
